--- a/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
+++ b/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
@@ -54,7 +54,8 @@
                                 Width="105" Height="18"
                                 HorizontalAlignment="Left"
                                 Margin="0,0,0,2"></TextBlock>
-                        <ListView Height="100" Width="350" 
+
+                        <ListView Height="100" Width="350"  Visibility="{Binding TagsExist, Converter={StaticResource BoolToVisConverter}}"
                                 BorderBrush="Transparent"
                                 ItemsSource="{Binding Tags}"
                                   ItemContainerStyle="{StaticResource ListViewItemStyle}">
@@ -85,7 +86,11 @@
                                 </ItemsPanelTemplate>
                             </ListView.ItemsPanel>
                         </ListView>
-                        
+                        <Grid Visibility="{Binding TagsExist, Converter={StaticResource BoolToVisConverter}, ConverterParameter=False}" 
+                              Height="100" Width="350">
+                            <TextBlock Text="There are currently no tags created" FontSize="15" FontStyle="Italic" Opacity=".8"
+                                       VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+                        </Grid>
                     </StackPanel>
 
                     
