--- a/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
+++ b/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
@@ -50,8 +50,8 @@
                         Width="350">
 
                     <StackPanel Margin="0,10,0,0">
-                        <TextBlock Text="Current Image Tags:" 
-                                Width="105" Height="18"
+                        <TextBlock Text="To add tag(s) select from list." 
+                                Width="200" Height="18"
                                 HorizontalAlignment="Left"
                                 Margin="0,0,0,2"></TextBlock>
 
